// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tree manipulation > changes all nodes in the tree 1`] = `
{
  "branch1": {
    "children": [
      "term1",
    ],
    "label": "test",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "term1": {
    "label": "test",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      0,
      4,
    ],
    "triangle": false,
  },
  "term2": {
    "label": "test",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      5,
      11,
    ],
    "triangle": false,
  },
  "top": {
    "children": [
      "branch1",
      "term2",
    ],
    "label": "test",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation > changes the label of a node 1`] = `
{
  "branch1": {
    "children": [
      "term1",
    ],
    "label": "test",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "term1": {
    "label": "N",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      0,
      4,
    ],
    "triangle": false,
  },
  "term2": {
    "label": "VP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      5,
      11,
    ],
    "triangle": false,
  },
  "top": {
    "children": [
      "branch1",
      "term2",
    ],
    "label": "S",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation > changes trianglehood of two nodes at the same time 1`] = `
{
  "branch1": {
    "children": [
      "term1",
    ],
    "label": "NP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "term1": {
    "label": "N",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      0,
      4,
    ],
    "triangle": true,
  },
  "term2": {
    "label": "VP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      5,
      11,
    ],
    "triangle": true,
  },
  "top": {
    "children": [
      "branch1",
      "term2",
    ],
    "label": "S",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation > deletes a branching node down the tree 1`] = `
{
  "term1": {
    "label": "N",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      0,
      4,
    ],
    "triangle": false,
  },
  "term2": {
    "label": "VP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      5,
      11,
    ],
    "triangle": false,
  },
  "top": {
    "children": [
      "term2",
    ],
    "label": "S",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation > deletes a terminal node down the tree 1`] = `
{
  "branch1": {
    "children": [
      "term1",
    ],
    "label": "NP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "term1": {
    "label": "N",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      0,
      4,
    ],
    "triangle": false,
  },
  "top": {
    "children": [
      "branch1",
    ],
    "label": "S",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation > deletes a top-level node 1`] = `
{
  "branch1": {
    "children": [
      "term1",
    ],
    "label": "NP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "term1": {
    "label": "N",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      0,
      4,
    ],
    "triangle": false,
  },
  "term2": {
    "label": "VP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      5,
      11,
    ],
    "triangle": false,
  },
}
`;

exports[`tree manipulation > deletes two nodes with ancestor-descendant relationship at once 1`] = `
{
  "branch1": {
    "formerDescendants": {
      "term1": {
        "label": "N",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          0,
          4,
        ],
        "triangle": false,
      },
    },
    "label": "NP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "term2": {
    "label": "VP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      5,
      11,
    ],
    "triangle": false,
  },
}
`;

exports[`tree manipulation > deletes two nodes with direct parent-child relationship at once 1`] = `
{
  "branch1": {
    "children": [
      "term1",
    ],
    "label": "NP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "term1": {
    "label": "N",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      0,
      4,
    ],
    "triangle": false,
  },
}
`;

exports[`tree manipulation > deletes two nodes with no ancestor-descendant relationship at once 1`] = `
{
  "branch1": {
    "formerDescendants": {
      "term1": {
        "label": "N",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          0,
          4,
        ],
        "triangle": false,
      },
    },
    "label": "NP",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
  },
  "top": {
    "children": [
      "branch1",
    ],
    "label": "S",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;

exports[`tree manipulation > inserts a branching node down the tree with a branching child 1`] = `
{
  "nodes": {
    "branch1": {
      "children": [
        "term1",
      ],
      "label": "NP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "new": {
      "children": [
        "branch1",
      ],
      "label": "?",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "term1": {
      "label": "N",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        0,
        4,
      ],
      "triangle": false,
    },
    "term2": {
      "label": "VP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        5,
        11,
      ],
      "triangle": false,
    },
    "top": {
      "children": [
        "term2",
        "new",
      ],
      "label": "S",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 5,
      },
    },
  },
  "offset": {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation > inserts a branching node down the tree with a terminal child 1`] = `
{
  "nodes": {
    "branch1": {
      "children": [
        "new",
      ],
      "label": "NP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "new": {
      "children": [
        "term1",
      ],
      "label": "N'",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "term1": {
      "label": "N",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        0,
        4,
      ],
      "triangle": false,
    },
    "term2": {
      "label": "VP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        5,
        11,
      ],
      "triangle": false,
    },
    "top": {
      "children": [
        "branch1",
        "term2",
      ],
      "label": "S",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 5,
      },
    },
  },
  "offset": {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation > inserts a branching node down the tree with two children 1`] = `
{
  "nodes": {
    "branch1": {
      "children": [
        "term1",
      ],
      "label": "NP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "new": {
      "children": [
        "branch1",
        "term2",
      ],
      "label": "?",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "term1": {
      "label": "N",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        0,
        4,
      ],
      "triangle": false,
    },
    "term2": {
      "label": "VP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        5,
        11,
      ],
      "triangle": false,
    },
    "top": {
      "children": [
        "new",
      ],
      "label": "S",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 5,
      },
    },
  },
  "offset": {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation > inserts a top-level branching node with one child 1`] = `
{
  "nodes": {
    "branch1": {
      "children": [
        "term1",
      ],
      "label": "NP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "new": {
      "children": [
        "term2",
      ],
      "label": "VP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "term1": {
      "label": "N",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        0,
        4,
      ],
      "triangle": false,
    },
    "term2": {
      "label": "VP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        5,
        11,
      ],
      "triangle": false,
    },
  },
  "offset": {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation > inserts a top-level branching node with two children 1`] = `
{
  "nodes": {
    "branch1": {
      "children": [
        "term1",
      ],
      "label": "NP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "new": {
      "children": [
        "branch1",
        "term2",
      ],
      "label": "S",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "term1": {
      "label": "N",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        0,
        4,
      ],
      "triangle": false,
    },
    "term2": {
      "label": "VP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        5,
        11,
      ],
      "triangle": false,
    },
  },
  "offset": {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation > inserts a top-level terminal node 1`] = `
{
  "nodes": {
    "branch1": {
      "children": [
        "term1",
      ],
      "label": "NP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "new": {
      "label": "V",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        5,
        11,
      ],
      "triangle": false,
    },
    "term1": {
      "label": "N",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        0,
        4,
      ],
      "triangle": false,
    },
    "top": {
      "children": [
        "branch1",
      ],
      "label": "S",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 5,
      },
    },
  },
  "offset": {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation > inserts a top-level terminal node with a triangle 1`] = `
{
  "nodes": {
    "branch1": {
      "children": [
        "term1",
      ],
      "label": "NP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
    },
    "new": {
      "label": "VP",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        5,
        11,
      ],
      "triangle": true,
    },
    "term1": {
      "label": "N",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 0,
      },
      "slice": [
        0,
        4,
      ],
      "triangle": false,
    },
    "top": {
      "children": [
        "branch1",
      ],
      "label": "S",
      "offset": {
        "dTreeX": 0,
        "dTreeY": 5,
      },
    },
  },
  "offset": {
    "dPlotX": 0,
    "dPlotY": 0,
  },
  "sentence": "Noun verbed.",
}
`;

exports[`tree manipulation > makes a branching node stranded when its children are gone 1`] = `
{
  "term1": {
    "label": "N",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 0,
    },
    "slice": [
      0,
      4,
    ],
    "triangle": false,
  },
  "top": {
    "formerDescendants": {
      "branch1": {
        "children": [
          "term1",
        ],
        "label": "NP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
      },
      "term1": {
        "label": "N",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          0,
          4,
        ],
        "triangle": false,
      },
      "term2": {
        "label": "VP",
        "offset": {
          "dTreeX": 0,
          "dTreeY": 0,
        },
        "slice": [
          5,
          11,
        ],
        "triangle": false,
      },
    },
    "label": "S",
    "offset": {
      "dTreeX": 0,
      "dTreeY": 5,
    },
  },
}
`;
